<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_marginTop="30dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/chatapp"/>


            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:gravity="start"
                android:fontFamily="@font/nunito"
                android:textColor="@color/black"
                android:text="@string/login_to_your_account"
                android:layout_marginStart="10dp"
                android:textSize="30sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextEmailInputLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/baseline_email_24"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorAppearance"
                app:helperTextEnabled="true">

                <EditText
                    android:id="@+id/loginetemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxWidth="400dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:maxLength="25"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    tools:background="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextPasswordInputLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:padding="0dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:endIconDrawable="@drawable/baseline_remove_red_eye_24"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorAppearance"
                app:helperTextEnabled="true"
                >

                <EditText
                    android:id="@+id/loginetpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxWidth="400dp"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLength="25"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    tools:background="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/loginButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/login"
            android:textSize="16sp"
            android:layout_marginTop="25dp"
            />

        <TextView
            android:id="@+id/signInTextToSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_account"
            android:fontFamily="@font/nunito_bold"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"/>



    </LinearLayout>
</ScrollView>
</layout>